<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.timetable.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_detail_0"
        android:name="com.example.timetable.ui.detail.DetailFragment"
        android:label="@string/menu_detail_0"
        tools:layout="@layout/fragment_detail" />
    <fragment
        android:id="@+id/nav_detail_1"
        android:name="com.example.timetable.ui.detail.DetailFragment"
        android:label="@string/menu_detail_1"
        tools:layout="@layout/fragment_detail" />
    <fragment
        android:id="@+id/nav_detail_2"
        android:name="com.example.timetable.ui.detail.DetailFragment"
        android:label="@string/menu_detail_2"
        tools:layout="@layout/fragment_detail" />
    <fragment
        android:id="@+id/nav_detail_3"
        android:name="com.example.timetable.ui.detail.DetailFragment"
        android:label="@string/menu_detail_3"
        tools:layout="@layout/fragment_detail" />
    <fragment
        android:id="@+id/nav_detail_4"
        android:name="com.example.timetable.ui.detail.DetailFragment"
        android:label="@string/menu_detail_4"
        tools:layout="@layout/fragment_detail" />
    <fragment
        android:id="@+id/nav_detail_5"
        android:name="com.example.timetable.ui.detail.DetailFragment"
        android:label="@string/menu_detail_5"
        tools:layout="@layout/fragment_detail" />
    <fragment
        android:id="@+id/nav_detail_6"
        android:name="com.example.timetable.ui.detail.DetailFragment"
        android:label="@string/menu_detail_6"
        tools:layout="@layout/fragment_detail" />

</navigation>